--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,16 @@
         <build>
                 <finalName>ELPDevOps</finalName>
         </build>
+        <distributionManagement>
+      <snapshotRepository>
+        <id>DevOpsBatch5</id>
+        <url>http://54.229.233.248:8082/artifactory/DevOpsBatch5/</url>
+      </snapshotRepository>
+      <repository>
+        <id>DevOpsBatch5</id>
+        <url>http://54.229.233.248:8082/artifactory/DevOpsBatch5/</url>
+      </repository>
+    </distributionManagement>
  <profiles>
 <profile>
 <id>sonar</id>
