--- a/pom.xml
+++ b/pom.xml
@@ -34,14 +34,15 @@
         </build>
         <distributionManagement>
       <snapshotRepository>
-        <id>DevOpsBatch5</id>
+        <id>jfrog-snapshots</id>
         <url>http://54.229.233.248:8082/artifactory/DevOpsBatch5/</url>
       </snapshotRepository>
       <repository>
-        <id>DevOpsBatch5</id>
+        <id>jfrog-releases</id>
         <url>http://54.229.233.248:8082/artifactory/DevOpsBatch5/</url>
       </repository>
     </distributionManagement>
+
  <profiles>
 <profile>
 <id>sonar</id>
